assets/stylesheets/stylesheet.css
#bg {
  position: fixed;
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
}
#bg img {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  min-width: 50%;
  min-height: 50%;
}

.navbar-brand img{
    max-width: 250px;
    max-height: 200px;
    padding-bottom: 15px;
  }

.navbar .nav > li > a  {
  color: #D8D8D8;
}

.navbar .nav > li > a:hover  {
  color: #FFF;
}

.navbar.navbar-default {
  background-color: transparent !important;
  border-color: transparent;
  background-image: none;
  box-shadow: none;
}

.navbar-right {
  margin-left: 15px;
  font-family: 'Raleway', sans-serif;
  font-weight: bold;
  font-size: 16px;
  margin-top: 25px;
}

h1 {
  font-family: 'Raleway', sans-serif;
  padding-top: 35px;
  padding-bottom: 15px;
  font-weight: bold;
}

body {
  font-family: 'Noto Serif', serif;
  color: #605D5D;
  /* padding-left: 100px;
  padding-right: 100px; */
}

img, table {
  max-width: 100%;
  height: auto;
}


/*MUSIC PAGE STYLING START  */
.media-banner {
  background-image: url("../images/media-page/media-hero.jpg");
  margin-bottom: 10px;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 600px;
}

.feature-videos {
  margin-bottom: 30px;
}

.row.instagram {
  margin-top: 30px;
}

.row.instagram.lower {
  margin-bottom: 80px;
}
/*MUSIC PAGE STYLING END*/

/*ABOUT PAGE STYLING START  */
.about-banner {
  background-image: url("../images/about/about-hero.png");
  margin-bottom: 10px;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 600px;
}

.row.about-section {
  margin-top: 25px;
}


.full-band {
  float:right;
}
/*ABOUT PAGE STYLING END*/

/*TOUR DATES TABLE STYLING START*/
.tour-dates-banner {
  background-image: url("../images/tour-dates/tour-dates-hero.png");
  margin-bottom: 10px;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 600px;
}

table {
  width: 100%;
  padding-top: 25px;
  border-spacing: 0 15px;
}

th {
  font-family: 'Raleway', sans-serif;
  text-align: left;
  padding-bottom: 20px;
}

a:link {
  text-decoration: none;
  color: #605d5d;
}

a:visited {
  text-decoration: none;
  color: #605d5d;
}

.buy-now {
    font-family: 'Raleway', sans-serif;
    text-align: center;
    background-color: #D8D8D8;
    width: 220px;
    height: 45px;
}

.table-content {
  font-family: 'Noto Serif', serif;
}

.tour-dates-announced-box {
  width: 320px;
  text-align: center;
  border: 5px solid #605D5D;
  margin: auto;
  margin-top: 25px;
  font-family:'Raleway', sans-serif;
  font-weight: bold;
  font-size: 20px;
}

.date {
  padding-right: 50px;
}

/*TOUR DATES TABLE STYLING END*/

/* MERCH PAGE STYLING STARTS */
.merch-banner {
  background-image: url("../images/merch/merch-hero.jpg");
  margin-bottom: 10px;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 600px;
}


/* Merch Filter */
.container {
    overflow: hidden;
}

.filterDiv {
    float: left;
    color: #ffffff;
    width: 250px;
    line-height: 250px;
    text-align: center;
    margin: 25px;
    display: none;
    }
    /* Hidden by default */
}

/* The "show" class is added to the filtered elements */
.show {
    display: block;
}

.myBtnContainer {
  width: 100%;
}


/* Add a light grey background on mouse-over */
.btn:hover {
  background-color: #D8D8D8;
}

/* Add a dark background to the active button */
.btn.active {
  background-color: #605D5D;
  color: #D8D8D8;
}

.filterDiv:hover {
  cursor: not-allowed;
}

/*MERCH PAGE STYLING ENDS  */

/*DISCOGRAPHY PAGE STYLING STARTS*/
.discography-banner {
  background-image: url("../images/discography/discography-hero.jpg");
  margin-bottom: 10px;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 600px;
}


.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 3;
  right: 3;
  height: 100%;
  width: 93%;
  opacity: 0;
  transition: .5s ease;
  background-color: #605D5D;
}

.cover:hover .overlay {
  opacity: .9;
}

.text {
color: #D8D8D8;
font-size: 18px;
font-family: 'Raleway', sans-serif;
font-weight: bold;
text-align: center;
position: absolute;
top: 50%;
left: 50%;
transform: translate(-50%, -50%);
-ms-transform: translate(-50%, -50%);
}

.small-text {
color: #D8D8D8;
font-size: 12px;
font-family: 'Raleway', sans-serif;
font-weight: bold;
text-align: center;
position: absolute;
top: 50%;
left: 50%;
transform: translate(-50%, -50%);
-ms-transform: translate(-50%, -50%);
}

.small-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 3;
  right: 3;
  height: 100%;
  width: 90%;
  opacity: 0;
  transition: .5s ease;
  background-color: #605D5D;
}

.cover:hover .small-overlay {
  opacity: .9;
}

.small-covers {
  margin-bottom: 50px;
}

/* DISCOGRAPHY PAGE STYLING ENDS  */

